--- a/src/Shared/Footer/Footer.css
+++ b/src/Shared/Footer/Footer.css
@@ -2,4 +2,11 @@
     background-color: black;
     color: white;
     text-align: center;
+    padding: 20px;
+    margin-top:50px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    
 }
