--- a/src/Pages/Home/Service/Service.css
+++ b/src/Pages/Home/Service/Service.css
@@ -1,6 +1,7 @@
 .service {
     box-shadow: 0px 12px 23px -8px #464244;
     border-radius: 30px;
+    padding: 30px;
 }
 
 .service .description img {
