--- a/src/Pages/Home/About/About.css
+++ b/src/Pages/Home/About/About.css
@@ -3,3 +3,13 @@
  justify-content: center;
  padding: 50px;
 }
+
+@media only screen and (max-width: 576px){
+    .about-me{
+        text-align: center;
+        justify-content: center;
+        padding: 50px;
+        margin-top: 150px;
+        
+       }
+}
