--- a/src/Pages/Home/Blogs/Blogs.css
+++ b/src/Pages/Home/Blogs/Blogs.css
@@ -2,3 +2,11 @@
     text-align: center;
     padding: 60px;
 }
+
+@media only screen and (max-width: 576px){
+    .blogs-details{
+        margin-top: 150px;
+        text-align: center;
+        padding: 60px;
+    }
+}
