--- a/src/Pages/Home/Service/Service.css
+++ b/src/Pages/Home/Service/Service.css
@@ -15,11 +15,12 @@
     text-align: center;
 }
 
-.service .description button {
+.join-btn {
+    text-decoration: none;
     color: #ffffff;
     font-weight: 500;
     background-color: #191216;
-    border-radius: 30px;
+    border-radius: 20px;
     box-shadow: 0px 12px 23px -8px #ff008f;
     padding: 10px;
 }
