--- a/src/Pages/Home/Services/Services.css
+++ b/src/Pages/Home/Services/Services.css
@@ -7,6 +7,13 @@
    
 }
 
-@media only screen  {
-    
+@media only screen and (max-width: 576px)  {
+    .services-grid {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 0px;
+        margin-top: 10px;
+     
+       
+    }
 }
