--- a/src/Pages/Home/Service/Service.css
+++ b/src/Pages/Home/Service/Service.css
@@ -2,6 +2,8 @@
     box-shadow: 0px 12px 23px -8px #464244;
     border-radius: 30px;
     padding: 30px;
+    background-color: #191216;
+    color: #ffffff;
 }
 
 .service .description img {
@@ -19,7 +21,7 @@
     text-decoration: none;
     color: #ffffff;
     font-weight: 500;
-    background-color: #191216;
+    background-color: #674257;
     border-radius: 20px;
     box-shadow: 0px 12px 23px -8px #ff008f;
     padding: 10px;
